--- a/app/views/groups/_details.haml
+++ b/app/views/groups/_details.haml
@@ -7,11 +7,15 @@
     %tr
       %td= t('groups.show.details.created_by')
       %td= link_to(@group.creator.name, @group.creator)
-  - if @group.leader
+  - if @group.leader || @group.leaders
     %tr
-      %td= t('groups.show.details.leader')
-      %td= link_to(@group.leader.name, @group.leader)
-  - if @group.admins.any? and @group.admins.to_a != [@group.leader]
+      %td
+        = t('groups.show.details.leader')
+      %td
+        = link_to(@group.leader.name, @group.leader) if @group.leader
+          - @group.leaders.each do |leaders|
+          = link_to(leaders.person.try(:name), leaders.person) if (leaders.person && leaders.person != @group.leader)
+  - if @group.admins.any? and @group.admins.to_a != [@group.leader] and @group.admins.to_a != @group.leaders
     %tr
       %td= t('groups.show.details.admins')
       %td= @group.admins.map { |p| link_to(p.try(:name), p) }.join(', ').html_safe
