--- a/app/views/groups/_form_details.haml
+++ b/app/views/groups/_form_details.haml
@@ -21,8 +21,8 @@
   = form.label :other_notes
   = form.text_area :other_notes, rows: 3, class: 'form-control'
 .form-group
-  = form.label :leader_id
-  = form.select :leader_id, @group.people.map { |m| [m.name, m.id] }, { include_blank: true }, class: 'form-control'
+  = form.label :leaders
+  = form.select :leaders, @group.people.map { |m| [m.name, m.id] }, { include_blank: false }, class: 'form-control', multiple: 'multiple'
 .form-group
   = form.label :creator
   = form.text_field :creator, value: (@group.creator ? @group.creator.name : nil), readonly: true, name: 'creator_name', class: 'form-control'
